# packratt

./: .bumpversion.cfg  HISTORY.rst  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: main.yml
packratt/: __init__.py  application.py  cache.py  directories.py  downloads.py  google_drive.py  interface.py  registry.py  url.py
packratt/conf/: registry-schema.yaml  registry.yaml
packratt/tests/: conftest.py  test_cache.py  test_get.py  test_registry.py  test_registry_schema.py
